# kora

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  provider_issue.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
docs/: index.html
docs/plans/: 2026-03-22-phase1-foundation.md  2026-03-22-phase2-core-pipeline.md  2026-03-22-phase3-planning-implementation.md  2026-03-22-phase4-validation-polish.md
docs/specs/: 2026-03-22-kora-design.md
npm/: install.js  package.json
prompts/: code_reviewer.md  code_security_auditor.md  implementor.md  judge.md  planner.md  researcher.md  reviewer.md  security_auditor.md  test_architect.md  validator.md
src/: lib.rs  main.rs  shutdown.rs
src/agent/: mod.rs  output_parser.rs  prompts.rs
src/cli/: app.rs  clean.rs  configure.rs  history.rs  meta_commands.rs  mod.rs  resume.rs
src/config/: mod.rs  presets.rs  schema.rs
src/git/: worktree.rs
src/pipeline/: context.rs  implementation.rs  merge.rs  metrics.rs  mod.rs  orchestrator.rs  planner.rs  researcher.rs  (+4 more)
tests/: clean_test.rs  cli_test.rs  config_test.rs  context_test.rs  dashboard_test.rs  history_test.rs  implementation_test.rs  merge_test.rs  meta_commands_test.rs  metrics_test.rs  output_parser_test.rs  pipeline_test.rs  planner_test.rs  provider_test.rs  resume_test.rs  retry_test.rs  review_loop_test.rs  stall_test.rs  state_test.rs  test_architect_test.rs  validation_test.rs  verbosity_test.rs  worktree_test.rs
(+18 files in other folders)
